# JamMa-TensorRT

./: README.md  build_trt_engine.py  export_jamma_onnx_static.py  requirements.txt  run_trt_inference.py
demo/: demo.py
trt_plugin/: CMakeLists.txt  build_plugin.sh  selective_scan_plugin.cpp  selective_scan_plugin.cu  selective_scan_plugin.hpp
